@@ -1,3 +1,8 @@
+2011-11-18  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* findvar.c (read_frame_register_value): Respect value_offset
+	of the register value.  Remove big-endian special case.
+
 2011-11-18  Tom Tromey  <tromey@redhat.com>
 
 	PR build/7196:
